# 3D_hw2

./: .gitignore  README.md
examples/dtvd3d/tetrahedralise/: CMakeLists.txt  readme.md  t1.cpp
examples/dtvd3d/tetrahedralise/data/: b2.off
examples/dtvd3d/vorocell/: CMakeLists.txt  README.md  vorocell.cpp
hw/02/cpp/src/: main.cpp
hw/02/data/: nextbk_2b.city.json
hw/1/: hw1.cpp
hw/2/cpp/: CMakeLists.txt
hw/2/cpp/src/: main.cpp
hw/2/data/: nextbk_2b_out.city.json
